base/src/test/resources/failure/levels/refparo5.aya.txt
In file $FILE:4:11 ->

  2 |   
  3 |   struct TypeStruct : Type
  4 |     | type : Type
    |              ^--^

Error: The level here is expected to be <= Type 0 but it is actually Type 1

1 error(s), 0 warning(s).
What are you doing?
